--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,15 @@
 <body>
+	
 	<% if current_user %>
 		Welcome, <%= current_user.email %>
 	<% end %>
+	
+<% if flash[:notice] %>
+    <div id="notice">
+      <%= flash[:notice] %>
+    </div>
+<% end %>
+
 	<%= yield %>
+
 </body>
