--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,15 +1,28 @@
 <body>
+
+	<% if flash[:errors] && !flash[:errors].empty? %>
+	  Sorry, there were the following problems with the form.
+	  <ul id="errors">
+	    <% flash[:errors].each do |error| %>
+	      <li><%= error %></li>
+	    <% end %>
+	  </ul>
+	<% end %>
 	
+
 	<% if current_user %>
 		Welcome, <%= current_user.email %>
 	<% end %>
 	
-<% if flash[:notice] %>
-    <div id="notice">
-      <%= flash[:notice] %>
-    </div>
-<% end %>
+
+	<% if flash[:notice] %>
+	    <div id="notice">
+	      <%= flash[:notice] %>
+	    </div>
+	<% end %>
+
 
 	<%= yield %>
+
 
 </body>
