--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,3 +1,17 @@
+  <% if current_user %>
+    Welcome, <%= current_user.email %>
+    <form method="post" action="/sessions">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="Sign out">
+    </form>
+  <% end %>
+
+  <% if flash[:notice] %>
+    <div id="notice">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+
 <body>
 
 	<% if flash[:errors] && !flash[:errors].empty? %>
@@ -9,10 +23,6 @@
 	  </ul>
 	<% end %>
 	
-
-	<% if current_user %>
-		Welcome, <%= current_user.email %>
-	<% end %>
 	
 
 	<% if flash[:notice] %>
