--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,9 @@
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
+  </head>
+
 <div id="new-peep">
   <form action="/peeps" method="post">
     Peep: <input type="text" name="peep">
@@ -12,3 +18,4 @@
   <% end %>
 </ul>
 
+</html>
