--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,7 +1,3 @@
-body {
-	
-}
-
 /* unvisited link */
 a:link {
 		color: #450015;
@@ -22,6 +18,14 @@ a:active {
     color: #A1A131;
 }
 
+a.title {
+	color: #f78d1d;
+	background-color: #041833;	
+	font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
+	font-size: 20;
+	position: center;
+}
+
 header {
 	color: #f78d1d;
 	background-color: #041833;	
@@ -34,9 +38,17 @@ h1 {
 	color: #f78d1d;
 	background-color: #041833;	
 	font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
-	font-size: 20;
+	font-sizee: 20;
 	position: center;
 	margin: 0 auto;
+}
+
+h3 {
+	font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
+	font-size: 14;
+	color: black;
+	padding: 20;
+	text-align: center;
 }
 
 ul {
@@ -49,6 +61,40 @@ li {
 	display: inline;
 	padding-top: 20;
 	margin-top: 50px;
+}
+
+ul.peeps {
+	text-align: center;
+	display: block;
+	margin: 10px;
+	/*border: 10px solid;*/
+}
+
+li.peeps {
+	display: block;
+	margin: 0px;
+	padding: 2px;
+}
+
+form {
+	font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
+	font-size: 14;
+	text-align: center;
+}
+
+form.signout{
+	text-align: left;
+}
+
+div#peep_container{
+	text-align: center;
+	border: 2px solid;
+	border-radius: 20;
+	color: black;
+	margin: 0 auto;
+	margin-bottom: 20px;
+	max-width: 30%;
+	background-position: center;
 }
 
 .button {
