--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
   <% end %>
 
 <ul class="peeps">
-  <% @peeps.each do |peep| %>
+  <% @peeps.reverse.each do |peep| %>
     <div id="peep_container"><li class="peeps"><%= peep.text %></li></div>
   <% end %>
 </ul> 
