updated tests to include username

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -41,7 +41,7 @@ h1 {
 	font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
 	font-size: 20;
 	position: center;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 }
 
 h3 {
@@ -67,13 +67,16 @@ li {
 ul.peeps {
 	text-align: center;
 	display: block;
-	margin: 10px;
-	/*border: 10px solid;*/
+	margin-top: 10px;
+	max-width: 60%;
+	border: 1px solid;
+	margin: 0 auto;
+	border-radius: 2%;
 }
 
 li.peeps {
 	display: block;
-	margin: 0px;
+	margin: 10px;
 	padding: 2px;
 }
 
@@ -89,6 +92,7 @@ form.signout{
 
 div#new-peep{
 	margin-top: 10px;
+	margin-bottom: 20px;
 }
 
 div#peep_container{
@@ -98,8 +102,10 @@ div#peep_container{
 	color: black;
 	margin: 0 auto;
 	margin-bottom: 20px;
+	margin-top: 20px;
 	max-width: 30%;
 	background-position: center;
+	box-shadow: 0 0 5px rgba(0,0,0,0.4);
 }
 
 div#time{
