--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
 
 <ul class="peeps">
   <% @peeps.reverse.each do |peep| %>
-    <div id="peep_container"><li class="peeps"><%= peep.text %><div id="time">Created on: <%= peep.created_at.strftime("%m/%d/%Y at %I:%M%p") %></div></li></div>
+    <div id="peep_container"><li class="peeps"><%= peep.text %><div id="time">Created on: <%= peep.created_at.strftime("%d/%m/%Y at %I:%M%p") %></div></li></div>
   <% end %>
 </ul> 
 
