--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,29 +10,23 @@
   </head>
 
   <header>
-  <h1><a href="/" class="title">Chitter.</a></h1>
-	  <section="topper">
+  	<h1><a href="/" class="title">Chitter.</a></h1>
 	  <div id="logo">
 	  	<img src="logo.png" alt="logo">
 	  </div>
-	  <ul>
-		  <li>
-		  	<% if current_user %>
-			    Welcome, <%= current_user.username %>
-			    <form method="post" action="/sessions" class ="signout">
-			      <input type="hidden" name="_method" value="delete">
-			      <input type="submit" value="Sign out">
-			    </form></li>
-			  <% else %>
-			<li>
+	  <section class="signed_in">
+	  	<% if current_user %>
+	  		<p class="signed_in_message">Welcome, <%= current_user.username %></p>
+	  		<form method="post" action="/sessions" class ="signout">
+		      <input type="hidden" name="_method" value="delete">
+		      <input type="submit" value="Sign out">
+			   </form>
+			<% else %>
 			  <a href="/sessions/new" class="button orange">Sign In</a></li>
-			<li> 
 				<a href="/users/new" class="button orange">Sign Up</a></li> 
-			  <% end %>
-
-	  </ul>
+		  <% end %>
+	  </section>
   </header>
-  </section="topper">
 <body>
 
 
